objects/Sales_pipeline__c.object
<CustomObject>
    <description>削除対象Object（旧JRI利用）
すべての商談、及びその確度・受注・出荷・搬入・検収状況を管理します</description>
    <fields>
        <fullName>Background__c</fullName>
        <description>商談の背景（契機など）をご記入ください</description>
        <label>商談の背景</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CIF__c</fullName>
        <description>各地域向けのCIF価格を現地通貨建てで入れてください
値引き率から参照されているため削除できず</description>
        <inlineHelpText>各地域向けのCIF価格を現地通貨建てで入れてください</inlineHelpText>
        <label>CIF価格</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closing_date__c</fullName>
        <description>正注（一番受注）予定日を入れてください　（2，8番予定日は不要です）</description>
        <inlineHelpText>正注（一番受注）予定日を入れてください　（2，8番予定日は不要です）</inlineHelpText>
        <label>受注（1番）予定日</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Competing_situation__c</fullName>
        <label>競合状況-備考</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>競合相手</label>
        <picklist>
            <picklistValues>
                <fullName>Agilent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bruker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>その他</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Competitors_offer__c</fullName>
        <description>複数社が存在する場合は、より有力な相手の数字を記入してください</description>
        <label>競合提示金額</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deal_price_local_cur__c</fullName>
        <description>受注予定金額を現地通貨建てで入れてください</description>
        <inlineHelpText>受注予定金額を現地通貨建てで入れてください</inlineHelpText>
        <label>受注予定金額</label>
        <precision>11</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_price_yen__c</fullName>
        <description>自動計算されます：
$1=80円
€1=105円
￡1=128円
1シンガポールドル=66円</description>
        <formula>case(CurrencyIsoCode,
&quot;USD&quot;,80,
&quot;EUR&quot;,105,
&quot;GBP&quot;,128,
&quot;SGD&quot;,66,
&quot;JPY&quot;,1,
0)

*

Deal_price_local_cur__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>自動計算されます：
$1=80円
€1=105円
￡1=128円
1シンガポールドル=66円</inlineHelpText>
        <label>受注予定金額（円建て）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Delivery_deadline_export__c</fullName>
        <description>海外のお客様への現地搬入納期です</description>
        <inlineHelpText>海外のお客様への現地搬入納期です</inlineHelpText>
        <label>海外現地搬入納期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <label>仕向地（海外）</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_rate__c</fullName>
        <formula>1 - Deal_price_local_cur__c /  CIF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>値引き率</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Estimate_number__c</fullName>
        <description>最新見積書番号を入力してください</description>
        <label>最終見積書番号</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field17__c</fullName>
        <defaultValue>false</defaultValue>
        <label>商社関与</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field18__c</fullName>
        <defaultValue>false</defaultValue>
        <label>リース関与</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field19__c</fullName>
        <label>追加情報-備考</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ichiban_date__c</fullName>
        <description>1番入力がされれば、自動反映されます。通常は入力不要です。</description>
        <inlineHelpText>1番入力がされれば、自動反映されます。通常は入力不要です。</inlineHelpText>
        <label>正注日(BAAN)から</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsAfterMaintenance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>将来の保守契約の有無</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OLD_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>旧環境SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order_number__c</fullName>
        <externalId>true</externalId>
        <label>販売オーダー</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selection_path__c</fullName>
        <description>装置導入区分</description>
        <inlineHelpText>竹内さんの要望対応として用意しました。当面はテスト運用です。</inlineHelpText>
        <label>装置導入区分</label>
        <picklist>
            <picklistValues>
                <fullName>① J-J</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>② J-B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>③ J-A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>④ B-B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>⑤ B-J</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>⑥ B-A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>⑦ A-A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>⑧ A-J</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>⑨ A-B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>⑩ 新規J</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>⑪ 新規B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>⑫ 新規A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_order__c</fullName>
        <description>サービス・マルフ金額を入力してください</description>
        <inlineHelpText>サービス・マルフ金額を入力してください</inlineHelpText>
        <label>マルフ予定金額（ERP)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Spectrometer_serial__c</fullName>
        <description>本体の製番</description>
        <inlineHelpText>本体の製番を入力。玉当てされた場合、ここに本体製番を入力します。</inlineHelpText>
        <label>本体製番（BAANから）</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Syouhaiin_Brand__c</fullName>
        <inlineHelpText>記入例：既納装置の稼働状況が良かったためJRI製品に対する信頼度高かった。BRUKERは世界的に市場占有率高いことを強く宣伝していたが日本でのJRIの実績が評価された</inlineHelpText>
        <label>信頼度（ブランドイメージ）</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Syouhaiin_Eigyou__c</fullName>
        <inlineHelpText>記入例：予算申請時の適切な装置構成の提示、タイムリーなDEMOが実施出来たことが評価された</inlineHelpText>
        <label>営業的要因</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Syouhaiin_Kinousouchi__c</fullName>
        <inlineHelpText>記入例：既納EX400は12年になるが大きなトラブルなく順調に稼働しておりプラス評価となった</inlineHelpText>
        <label>既納装置との関連(既納納置の稼働状況)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Syouhaiin_Seinou__c</fullName>
        <inlineHelpText>感度、分解能、NoD NMR,ROSY,DOSY,Top Shim,Magic shim ,NUS　,超高速MAS、Top Loading,固体ASC等キーワードを入れて記入</inlineHelpText>
        <label>性能　機能評価</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Syouhaiin_Sousa__c</fullName>
        <inlineHelpText>記入例：Deltaは無償処理ソフトで慣れていたので操作性は良かったがオートサンプラー含めた測定時間がBRUKER3分/1本に対して5分/1本でマイナス評価となった</inlineHelpText>
        <label>操作性　スループット</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Syouhaiin_Tasyakakaku__c</fullName>
        <inlineHelpText>記入例：AVIIIHD400　Smart Probe,24本ASC、4mm CPMAS,N2再液化装置込みで最終提示価格2980万円</inlineHelpText>
        <label>他社提示価格</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>lead_source__c</fullName>
        <label>商談のきっかけ</label>
        <picklist>
            <picklistValues>
                <fullName>電話での問い合わせ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webからの問い合わせ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>展示会での問い合わせ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>営業の直接訪問から</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>商社経由</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JEOL経由</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>その他</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>maruhu_yes_no__c</fullName>
        <description>マルフがある場合、「あり」を選択してください</description>
        <inlineHelpText>マルフがある場合、「あり」を選択してください</inlineHelpText>
        <label>マルフ有無</label>
        <picklist>
            <picklistValues>
                <fullName>あり</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>なし</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>niban_juchu__c</fullName>
        <description>二番受注予定日です</description>
        <inlineHelpText>二番受注予定日です</inlineHelpText>
        <label>仮受注（2番）予定日</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>shipping_date_NMR__c</fullName>
        <inlineHelpText>本体の荷造日です。BAANからの情報が反映されます</inlineHelpText>
        <label>荷造日（本体）</label>
        <type>Date</type>
    </fields>
    <label>営業パイプライン（旧）</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Field22__c</columns>
        <columns>NAME</columns>
        <columns>Closing_date__c</columns>
        <columns>Field7__c</columns>
        <columns>Order_number__c</columns>
        <columns>Field2__c</columns>
        <columns>Field3__c</columns>
        <columns>Deal_price_yen__c</columns>
        <columns>Deal_price_local_cur__c</columns>
        <columns>Competing_situation__c</columns>
        <columns>Field5__c</columns>
        <columns>Field29__c</columns>
        <columns>Field20__c</columns>
        <columns>Field1__c</columns>
        <columns>Field25__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>SalesPipelineView</fullName>
        <columns>NAME</columns>
        <columns>Field7__c</columns>
        <columns>Field29__c</columns>
        <columns>Deal_price_local_cur__c</columns>
        <columns>Closing_date__c</columns>
        <columns>Field2__c</columns>
        <columns>Field3__c</columns>
        <columns>maruhu_yes_no__c</columns>
        <filterScope>Everything</filterScope>
        <label>営業パイプライン</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>Shimokawa_View</fullName>
        <columns>Field29__c</columns>
        <columns>Field22__c</columns>
        <columns>Field24__c</columns>
        <columns>NAME</columns>
        <columns>Field1__c</columns>
        <columns>Field7__c</columns>
        <columns>Field2__c</columns>
        <columns>Field3__c</columns>
        <columns>Order_number__c</columns>
        <columns>Closing_date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field25__c</field>
            <operation>contains</operation>
            <value>外</value>
        </filters>
        <label>下川さんビュー_13年度採る案件</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>Suematsu_View</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>末松さんビュー</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>View1</fullName>
        <columns>Closing_date__c</columns>
        <columns>Field22__c</columns>
        <columns>Field24__c</columns>
        <columns>Order_number__c</columns>
        <columns>Field7__c</columns>
        <columns>NAME</columns>
        <columns>Field1__c</columns>
        <columns>Destination__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field25__c</field>
            <operation>equals</operation>
            <value>外</value>
        </filters>
        <filters>
            <field>Field7__c</field>
            <operation>notEqual</operation>
            <value>受注</value>
        </filters>
        <label>下川さんビュー</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>View_tanaka</fullName>
        <columns>Field25__c</columns>
        <columns>NAME</columns>
        <columns>Order_number__c</columns>
        <columns>Field7__c</columns>
        <columns>Field2__c</columns>
        <columns>Field3__c</columns>
        <columns>Closing_date__c</columns>
        <columns>Field22__c</columns>
        <columns>Field24__c</columns>
        <columns>Field29__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field7__c</field>
            <operation>contains</operation>
            <value>次年度以降,商談中,見込受注(8番）,仮受注,受注,検収済み,商談流れ,取り消し,初期引き合い</value>
        </filters>
        <filters>
            <field>Field25__c</field>
            <operation>equals</operation>
            <value>内,外</value>
        </filters>
        <label>田中さんビュー</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>Yoshida_View</fullName>
        <columns>Field29__c</columns>
        <columns>Field22__c</columns>
        <columns>Field24__c</columns>
        <columns>NAME</columns>
        <columns>Field1__c</columns>
        <columns>Field7__c</columns>
        <columns>Field2__c</columns>
        <columns>Field3__c</columns>
        <columns>Order_number__c</columns>
        <columns>Closing_date__c</columns>
        <columns>shipping_date_NMR__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field22__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2013</value>
        </filters>
        <filters>
            <field>Field7__c</field>
            <operation>notContain</operation>
            <value>検収済み,商談流れ,負け,取り消し</value>
        </filters>
        <filters>
            <field>Field25__c</field>
            <operation>contains</operation>
            <value>内,外,社内貸与</value>
        </filters>
        <label>吉田さんビュー_13年度採る案件</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>商談名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>